# text_transfer

./: CMakeLists.txt  DialogLib.qml  Main.qml  apptext_transfer.js  firebase.cpp  firebase.h  index.html  main.cpp
